Pull up following revision(s) (requested by tsutsui in ticket #931): 	sys/dev/pci/virtio.c: revision 1.4 Make sure to check if the driver has a valid intr handler in virtio_detach(). Fixes a panic during shutdown on KVM under ubuntu 13.04 with virtio, as reported in PR kern/48105 by Richard Hansen. Should be pulled up to netbsd-6 branches.